--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,10 @@ dependencies:
   flutter:
     sdk: flutter
 
+  postgres: ^2.1.0
+  
+
+
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -62,6 +66,9 @@ flutter:
   assets:
      - assets/logo.png
      - assets/silueta.jpg
+     - assets/baraja_española.jpg
+     - assets/baraja_francesa.jpg
+     - assets/baraja_UNO.webp
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
