--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -66,7 +66,7 @@ flutter:
   assets:
      - assets/logo.png
      - assets/silueta.jpg
-     - assets/baraja_española.jpg
+     - assets/baraja_española.png
      - assets/baraja_francesa.jpg
      - assets/baraja_UNO.webp
 
