--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,10 +31,8 @@ dependencies:
   flutter:
     sdk: flutter
 
+  shared_preferences: ^2.0.8
   postgres: ^2.1.0
-  
-
-
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -75,7 +73,10 @@ flutter:
      - assets/baraja_española.jpg
      - assets/baraja_francesa.jpg
      - assets/baraja_UNO.webp
-     - assets/carta.png
+     - assets/reverso_azul.jpg
+     - assets/reverso_morado.jpg
+     - assets/reverso_naranja.jpg
+     - assets/reverso_rojo.jpg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
